--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,11 @@
 {
     "version": 2,
   
-    "builds": [{ "src": "src/main.ts", "use": "@vercel/node" }],
-    "rewrites": [
-      { "source": "/(.*)", "destination": "src/main.ts" }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "*" }
-      ]
-    },
-    {
-      "source": "/vercel_app_domain_name/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "*" }
-      ]
-    }  
-]
+    "builds": [{ "src": "dist/main.js", "use": "@vercel/node" }],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "dist/main.js"
+      }
+    ]
   }
